<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="calorie_crunch">Calorie Crunch</string>
    <string name="calories_tracker_app">Calories Tracker App</string>
    <string name="get_started">Get Started</string>
    <string name="what_s_your_current_weight">What\'s your current weight?</string>
    <string name="kgs">kgs</string>
    <string name="next">Next</string>
    <string name="what_s_your_target_weight">What\'s your target weight?</string>
    <string name="enter_your_personal_data">Enter your personal data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="what_s_your_activity_level">What\'s your activity level?</string>
    <string name="just_a_few_steps_left_to_get_your_personal_diet_plan">Just a few steps left to get your personal diet plan.</string>
    <string name="i_am_new_to_calorie_crunch">I am new to Calorie Crunch</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="password">Password</string>
    <string name="register_to_calorie_crunch">Register to Calorie Crunch</string>
    <string name="login_to_calorie_crunch">Login to Calorie Crunch</string>
    <string name="welcome_to_dashboard">Welcome to DashBoard!</string>
    <string name="logout">Logout</string>
    <string name="or">or</string>
    <string name="cardview_1_text">Track meals and see how much you\'re eating</string>
    <string name="cardview_2_text">Here is the list of the healthy foods you ate today</string>
    <string name="cardview_3_text">Here you can find personal info and your progress.</string>
    <string name="search_for_food">Search for food</string>
    <string name="click_to_see_full_details">Click to see full details</string>
    <string name="food_name">Food Name</string>
    <string name="today">Today</string>
    <string name="what_s_your_height">What\'s your height?</string>
    <string name="cm">cm</string>
    <string name="go_to_starting_page">Go to starting page</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="grams">Grams</string>
    <string name="add">Add</string>
    <string name="about_you">About you</string>
    <string name="_2000kcals">2000kcals</string>
    <string name="age">Age</string>
    <string name="www_test_email_com">www.test-email.com</string>
</resources>