<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="goToPreviousActivityOnClick"
            android:padding="15dp"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="100dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/register_to_calorie_crunch" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/or" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/orText"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
</RelativeLayout>