<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOfIngredientsActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout10"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="goToPreviousActivityOnClick"
            android:padding="15dp"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/todayText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:background="@color/light_green"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout10" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:cpb_background_progressbar_color="@color/light_grey"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/dark_green"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toTopOf="@id/recyclerview"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/caloriesCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_green"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/todayText">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/sumCaloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2000kcals"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:id="@+id/targetCaloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2000kcals"
                android:textSize="16sp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar"
        tools:listitem="@layout/recyclerview_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/medium_green"
        android:clickable="true"
        android:contentDescription="@string/add_ingredient"
        android:elevation="8dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>